# streamlit-app

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
pages/: 1_save.py  2_stat.py
