[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["funning.top"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.35.0"
pandas = "1.5.3"
pandasai = "2.2.7"
pymongo = "4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
